objects/PC_Health_Plan__c.object
<CustomObject>
    <description>Patient Connect custom object: Used to capture a patient&apos;s various health plans (private insurance companies, public payer plans) as part of Patient Connect&apos;s access functionality</description>
    <fields>
        <fullName>ACLS_PBM_Phone__c</fullName>
        <label>PBM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Group_No__c</fullName>
        <description>Group number of the private insurance</description>
        <label>Group No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Policy_No__c</fullName>
        <description>Identification number / policy number of private insurance</description>
        <label>ID / Policy No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Card_Holder_City__c</fullName>
        <description>The city associated with the cardholder&apos;s address.</description>
        <label>Cardholder City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Card_Holder_First_Name__c</fullName>
        <description>The first name of cardholder</description>
        <label>Cardholder First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Card_Holder_Gender__c</fullName>
        <description>Cardholder&apos;s gender information</description>
        <label>Cardholder Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Card_Holder_Last_Name__c</fullName>
        <description>Cardholder&apos;s last name</description>
        <label>Cardholder Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Card_Holder_Name__c</fullName>
        <description>Name of the person in whose name the card is issued</description>
        <label>Cardholder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Card_Holder_State__c</fullName>
        <description>State of the card holder&apos;s address</description>
        <label>Cardholder State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Card_Holder_ZipCode__c</fullName>
        <description>Zipcode of card holder&apos;s address</description>
        <label>Cardholder ZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Cardholder_Employer__c</fullName>
        <description>The Employer of the cardholder</description>
        <label>Cardholder Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Cardholder_ID_Policy_No__c</fullName>
        <description>ID number assigned to subscriber for insurance policy Conditionally required if any Subscriber field has a value</description>
        <label>Card Holder ID Policy No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Cardholder_Relationship_to_Patient__c</fullName>
        <description>Relationship of cardholder to patient</description>
        <label>Cardholder Relationship to Patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Cardholder_s_Date_of_Birth__c</fullName>
        <description>Cardholder&apos;s date of birth</description>
        <label>Cardholder&apos;s Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Created_By_Lookup_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to store whether the health plan was created by lookup service</description>
        <label>Created by Lookup service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Effective_Date__c</fullName>
        <description>Date the plan came into effect</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Expiration_Date__c</fullName>
        <description>Health Plan expiration date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Group_name__c</fullName>
        <description>Group name of the health plan</description>
        <label>Group name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Has_LTC_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this flag is checked, it means the coverage is by long term care pharmacy</description>
        <label>Longterm Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Has_Mail_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Health Plan has mail coverage benefit</description>
        <label>Mail Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Has_Retail_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Health Plan has retail coverage benefit</description>
        <label>Retail Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Has_Specialty_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this flag is checked, it means the coverage is by specialty pharmacy</description>
        <label>Specialty Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_MedicareSupplementalPlanLetter__c</fullName>
        <label>Medicare Supplemental Plan Letter</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PBMMember_Id__c</fullName>
        <description>To capture PBM Member Id from Pharmacy Card Lookup service</description>
        <label>PBM Member Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PBM_Name__c</fullName>
        <description>PBM name as returned by Pharmacy Card Lookup service or Payer name if no PBM name returned</description>
        <formula>IF(
ISBLANK(PC_Payer__c)== true,
            PC_PBM_Name_as_per_Card_Lookup_Service__c ,
PC_Payer__r.Name
)</formula>
        <label>PBM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PBM_Name_as_per_Card_Lookup_Service__c</fullName>
        <description>To capture the PBM Name from the Pharmacy Card Lookup Service</description>
        <label>PBM Plan Name as per Card Lookup Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Payer_Name__c</fullName>
        <formula>PC_Payer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organization providing reimbursement. May be a private insurance company or public (government) organization.</description>
        <label>Payer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Payer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Health Plans (Payer)</relationshipLabel>
        <relationshipName>Patient_Health_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Pharmacy_Card_Lookup_ID__c</fullName>
        <description>This field is to store Pharmacy Card Lookup ID and is expected to be populated automatically using Pharmacy Card Lookup service. DO NOT edit it manually.</description>
        <label>Pharmacy Card Lookup ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Pharmacy_Card_Lookup_Request_Time__c</fullName>
        <description>This field is to store Pharmacy Card Lookup Request Time and is expected to be populated automatically using Pharmacy Card Lookup service. DO NOT edit it manually.</description>
        <label>Pharmacy Card Lookup Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Plan_Claim_Card_No__c</fullName>
        <description>Number of the patient&apos;s public health plan&apos;s claim number or card number</description>
        <label>Plan Claim / Card No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Plan_Name__c</fullName>
        <description>This field will consist of functional names that will help Support Coordinators to identify Health Plan records.</description>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Plan_Status__c</fullName>
        <description>Status of the health plan</description>
        <label>Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Plan_Type__c</fullName>
        <description>Primary, secondary or tertiary health plan for patient</description>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Public_Or_Private__c</fullName>
        <description>This field indicates if the health plan is a public or private plan</description>
        <label>Public or Private</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Renewal_Date__c</fullName>
        <description>Date when date is due to be renewed</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Bin__c</fullName>
        <description>Six-digit number that health plans can use to process electronic pharmacy claims</description>
        <label>Rx Bin</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Grp__c</fullName>
        <description>Used to story Group number for Pharmacy Benefits Claims</description>
        <label>Rx Grp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Rx_PCN__c</fullName>
        <description>Used to story PCN for Pharmacy Benefits Claims</description>
        <label>Rx PCN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>Person receiving PSP services to and whom this health plan related.</description>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Health Plans</relationshipLabel>
        <relationshipName>Health_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Health Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HP-{000000000}</displayFormat>
        <label>Health Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Plans</pluralLabel>
    <recordTypes>
        <fullName>PC_Medical_Plan</fullName>
        <active>true</active>
        <description>Indicates the health plan is a medical plan</description>
        <label>Medical Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Pharmacy_Plan</fullName>
        <active>true</active>
        <description>Indicates the health plan is a pharmacy plan</description>
        <label>Pharmacy Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Private_Health_Plan</fullName>
        <active>false</active>
        <description>Patient&apos;s health plan that is privately funded</description>
        <label>Private Health Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Public_Health_Plan</fullName>
        <active>false</active>
        <description>Patient&apos;s health plan which is publicly funded</description>
        <label>Public Health Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PC_Validate_Cardholder_Date_of_Birth</fullName>
        <active>true</active>
        <errorConditionFormula>PC_Cardholder_s_Date_of_Birth__c   &gt;   TODAY()</errorConditionFormula>
        <errorDisplayField>PC_Cardholder_s_Date_of_Birth__c</errorDisplayField>
        <errorMessage>Cardholder&apos;s Date of Birth cannot be in future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_Validate_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>PC_Effective_Date__c  &gt;  PC_Expiration_Date__c  || PC_Effective_Date__c &gt; PC_Renewal_Date__c</errorConditionFormula>
        <errorDisplayField>PC_Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date must be same or older than Expiration Date and Renewal Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_Validate_Payer</fullName>
        <active>true</active>
        <description>Select Account of record type Payer</description>
        <errorConditionFormula>AND(PC_Payer__r.RecordType.Name != &apos;Payer&apos;,  NOT( ISBLANK(PC_Payer__c )))</errorConditionFormula>
        <errorDisplayField>PC_Payer__c</errorDisplayField>
        <errorMessage>Please select Account of record type Payer</errorMessage>
    </validationRules>
</CustomObject>